Update agent workflow and microsite

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <form onsubmit="event.preventDefault(); registerAgent();">
         <input type="text" id="agent-name" placeholder="Agent Name" required>
         <input type="text" id="agent-description" placeholder="Description" required>
-        <input type="url" id="agent-endpoint" placeholder="Agent API Endpoint" required>
+        <input type="url" id="agent-endpoint" placeholder="Endpoint URL" required>
         <button type="submit">Register</button>
     </form>
 </main>
